# cclean

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  install.mk  tinyrick.rs
example/: CMakeLists.txt  hello.c
src/: cclean.rs  lib.rs
